--- a/OverWatchAPI/build.gradle
+++ b/OverWatchAPI/build.gradle
@@ -20,6 +20,10 @@ repositories {
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
+    api group: 'io.vertx', name: 'vertx-core', version: '3.8.2'
+    api group: 'io.vertx', name: 'vertx-web', version: '3.8.2'
+    api group: 'io.vertx', name: 'vertx-web-client', version: '3.8.2'
+    api group: 'io.vertx', name: 'vertx-jdbc-client', version: '3.8.2'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:27.0.1-jre'
