db verticle to init db schemas

--- a/OverWatchAPI/build.gradle
+++ b/OverWatchAPI/build.gradle
@@ -27,7 +27,9 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:27.0.1-jre'
-
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+	implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.4.0'
+	
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
