--- a/OverWatchAPI/build.gradle
+++ b/OverWatchAPI/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.google.guava:guava:27.0.1-jre'
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 	implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.4.0'
+	implementation 'com.google.code.gson:gson:2.8.6'
 	
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
