--- a/SpringOverWatch/build.gradle
+++ b/SpringOverWatch/build.gradle
@@ -18,6 +18,10 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.2.1.RELEASE'
 	implementation group: 'com.h2database', name: 'h2', version: '1.4.196'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-rest', version: '2.2.1.RELEASE'
+	compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+	compile group: 'org.json', name: 'json', version: '20180813'
+	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
